0.50.6rc (unreleased)
------------------
- black formatting
- inline doc addition
- replaced outdated terms with more inclusive language

0.50.5 (2019-04-26)
------------------
- undid some aggressive 2to3 conversions
- integrating ratelimit detection and errors
- last_response_usage is a property now


0.50.4 (2019-04-25)
------------------
- now testing facebook api versions 2.7 - 3.2
- renamed `last_response_ratelimited` to `last_response_usage`; now checking two fields
- marked `last_response_ratelimited` for deprecation
- added `last_response_is_ratelimited`
- tested/works under python3
- added todo


0.50.3 (2018-08-08)
------------------
- catching another form of expired auth access

0.50.2 (2017-07-11)
------------------
- storing the api version internally
- doing some regex checking to ensure a valid api version is sent to the constructor
- reorganized tests to run against multiple API endpoint versions
- adding `fields` argument to:
	* graph__url_me_for_access_token (passthrough to `graph__get_profile_for_access_token`)
	* graph__url_user_for_access_token (passthrough to `graph__get_profile_for_access_token`)
	* oauth_code__get_access_token_and_profile (passthrough to `graph__get_profile_for_access_token`)
	* graph__get_profile_for_access_token
- restructured some url templates to use a `qs` querystring instead of attribute names

The reason for the above changes: the `v2.3` deprecation changed some Facebook API behaviors in undocumented ways. Most notably, `email` is not automatically returned with a profile. It must be queried specifically.

0.50.1 (2017-03-31)
------------------
- added 'secure_only' constructor, default True, to ensure https requests
- fixed how pyramid support used 'ssl_verify'
- made url optional to api_proxy, defaulting to the graph url otherwise
- appsecret_proof upgrades for get_data too


0.50.0 (2017-03-29)
------------------
- updates to work with recent facebook api changes
- - some apis now hit different endpoints