@@ -3,6 +3,7 @@
 - black formatting
 - inline doc addition
 - replaced outdated terms with more inclusive language
+- integrated with pre-commit
 
 0.50.5 (2019-04-26)
 ------------------
